@@ -1,3 +1,8 @@
+29-10-2008	Dmitry Dulepov	<dmitry@typo3.org>
+
+	* Change to TCEmain to use 'pagepath' extension to get path in FE
+	* Record new url when page/record is renamed
+
 25-10-2008	Dmitry Dulepov	<dmitry@typo3.org>
 
 	* Major refactoring and change of classes to use TS options and simplify flexform. Dropped TV renderer.
